Widgetisation de la dropdown de notification

--- a/src/app/modules/commons/users/signup/signupEndDone.html
+++ b/src/app/modules/commons/users/signup/signupEndDone.html
@@ -1,15 +1,12 @@
 <div class="container primary-text-color">
-<!-- body start-->
-    
-	<div class="container">
+    <div class="container">
         <div class="section">
-            <!--   Icon Section   -->
             <div class="row">
                 <div class="col s12">
                     <div class="center icon-block">
-                         <div class="accent-text-color">
-                             <i class="medium material-icons">verified_user</i>
-                         </div>
+                        <div class="accent-text-color">
+                            <i class="medium material-icons">verified_user</i>
+                        </div>
                         <h4 class="center" translate="signupStartDonePage.title"></h4>
                     </div>
                 </div>
@@ -17,43 +14,41 @@
             <div class="row">
                 <div class="col s12">
                     <span style="font-size:1.3em">
-                        {{'endPage.text.1' | translate }}<br>
-                        {{'endPage.text.2' | translate }}<br>
-                        {{'endPage.text.3' | translate }}<br>
-                        {{'endPage.text.4' | translate }}<br>
+                        <span translate="endPage.text.1"></span><br>
+                        <span translate="endPage.text.2"></span><br>
+                        <span translate="endPage.text.3"></span><br>
+                        <span translate="endPage.text.4"></span><br>
                     </span>
                 </div>
             </div>
             <div class="row">
                 <div class="right col s12">
-                	<span class="right">{{'signupStartDonePage.signature' | translate }}</span>
+                    <span class="right" translate="signupStartDonePage.signature"></span>
                 </div>
             </div>
             <div class="row">
                 <div class="center col s12">
-                <a href="#/private/" class="btn white-text accent-color">{{'signupStartDonePage.buttonHome' | translate }}</a>&nbsp;
+                    <a href="#/private/" class="btn white-text accent-color"
+                       translate="signupStartDonePage.buttonHome"></a>&nbsp;
                 </div>
             </div>
         </div>
     </div>
-</div>    
+</div>
 
 <div class="secondary-color">
     <div class="section white-text">
 
-
         <h5 class="center-align" translate="landing.area-4.content"></h5>
-
         <div class="row">
             <!-- 
             <span class="col m2 hide-on-small-only">&nbsp;</span>
             <img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
             -->
             <span class="col m5 hide-on-small-only">&nbsp;</span>
-            <img class="col m2 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
+            <a href="https://play.google.com/store/apps/details?id=com.qaobee.hand" target="_blank"><img
+                    class="col m2 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/></a>
             <span class="col m5 hide-on-small-only">&nbsp;</span>
         </div>
     </div>
 </div>
-   
-<!-- body end-->
