--- a/src/app/modules/commons/users/signup/signupEndError.html
+++ b/src/app/modules/commons/users/signup/signupEndError.html
@@ -22,7 +22,7 @@
             </div>
             <div class="row">
                 <div class="center col s12">
-                <a href="" class="btn white-text secondary-color" ng-click="goHome()">{{'signupEndPage.errorPage.buttonHome' | translate }}</a>&nbsp;
+                <a href="" class="btn white-text secondary-color" ng-click="goHome()" translate="signupEndPage.errorPage.buttonHome"></a>&nbsp;
                 </div>
             </div>
         </div>
