--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1106,6 +1106,25 @@ footer.page-footer {
     filter:progid:DXImageTransform.Microsoft.Shadow(color=rgba(0, 0, 0, 0.12), Direction=180, Strength=10);
 }
 
-.container-header {
-
+.notif-sender {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
+.notif-sender img {
+    max-width: 120px;
+    -webkit-filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.5));
+    -moz-filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.5));
+    -ms-filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.5));
+    -o-filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.5));
+    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.5));
+}
+
+.notif-panel {
+    margin-top: -60px;
+    padding-top: 50px;
+}
+.notif-panel .notif-close {
+    margin-top: -40px;
+    float: right;
+ }
