--- a/src/app/modules/home/notifications/notifications.html
+++ b/src/app/modules/home/notifications/notifications.html
@@ -1,63 +1,75 @@
-<div class="widget card blue-grey lighten-4 blue-grey-text text-darken-2">
-    <div class="card-content colorMain white-text">
-        <i class="fa fa-bell"></i>
-        {{'dashboard.widgetNotifications.title'  | translate}}
-    </div>
-    <div class="widget-content container" style="overflow-y: auto; height:250px;">
+<div class="container">
 
-        <!-- space between header menu and body-->
-        <div class="row"></div>
-        <div class="row">
-            <div class="col" ng-class="{'s12': !id, 's4' : id}">
-                <ul class="collection grey-text text-darken-2">
-                    <li class="collection-item avatar" ng-repeat="n in notifications"
-                        ng-class="{'grey lighten-1' : n.read && n._id !== id, 'colorSecondary' : n._id === id}">
-                        <img ng-src="{{getAvatar(n.senderId.avatar)}}" alt="" class="circle hide-on-med-and-down">
-                        <a href="javascript:void(0);" class="title" 
-                           ng-class="{'white-text' : n._id === id, 'red-text text-lighten-2' : n._id !== id}"
-                           ng-bind-html="n.title" ng-click="show(n._id)"></a>
-                        <p><span class="truncate" ng-bind-html="n.exerp"></span> <br>
-                            <small>{{n.senderId.firstname}} {{n.senderId.name}} | {{n.timestamp | date : 'short'}} |
-                                <a href="javascript:void(0);" ng-click="markAsRead(n._id)"
-                                   class="waves-effect waves-teal btn-flat"
-                                   style="padding: 0;">
-                                    <i class="tiny material-icons" ng-if="n.read"
-                                       title="{{'headerMenu.notifications.mark-as-unread' | translate}}">visibility_off</i><i
-                                        class="tiny material-icons" ng-if="!n.read"
-                                        title="{{'headerMenu.notifications.mark-as-read' | translate}}">visibility</i></a>
-                                <a href="javascript:void(0);" ng-click="deleteNotification(n._id)" style="padding: 0;"
-                                   class="waves-effect waves-teal btn-flat"><i
-                                        class="tiny material-icons"
-                                        title="{{'headerMenu.notifications.delete' | translate}}">delete</i></a>
-                            </small>
-                        </p>
-                        <a href="javascript:void(0);" class="secondary-content"><i class="material-icons md-24 light-green-text text-lighten-1" ng-click="show(n._id)">forward</i></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col s8" ng-if="id">
-                <div class="card-panel" ng-if="notif">
-                    <h4><a href="javascript:void(0);" ng-bind-html="notif.title"></a> <a href="javascript:void(0);" class="right"><i class="material-icons" ng-click="close()">close</i></a></h4>
-                    <p ng-bind-html="notif.content" style="text-align: justify"></p>
-                    <small>{{notif.timestamp | date : 'short'}}
-                        |
-                        <a href="javascript:void(0);" ng-click="markAsRead(notif._id)"
-                           class="waves-effect waves-teal btn-flat" style="padding: 0;">
-                            <i class="tiny material-icons" ng-if="notif.read"
-                               title="{{'headerMenu.notifications.mark-as-unread' | translate}}">visibility_off</i><i
-                                class="tiny material-icons" ng-if="!notif.read"
-                                title="{{'headerMenu.notifications.mark-as-read' | translate}}">visibility</i></a>
-                        <a href="javascript:void(0);" ng-click="deleteNotification(notif._id)" style="padding: 0;"
-                           class="waves-effect waves-teal btn-flat"><i class="tiny material-icons"
-                                                                       title="{{'headerMenu.notifications.delete' | translate}}">delete</i>
-                        </a>
-                    </small>
-                </div>
-            </div>
-            <div class="card-panel" ng-if="notifications.length ===0">
-                    <h4 class="center-align" translate="notifications.nodata"></h4>
-                </div>
+    <!-- space between header menu and body-->
+    <div class="row"></div>
+
+    <!-- Entete -->
+    <!-- entete start tablet and sup-->
+    <title-page-bar icon="chat_bubble" title="dashboard.widgetNotifications.title"></title-page-bar>
+
+    <!-- space between header menu and body-->
+    <div class="row"></div>
+    <div class="row">
+        <div class="col" ng-class="{'s12': !id, 's4' : id}">
+            <ul class="collection grey-text text-darken-2">
+                <li class="collection-item avatar" ng-repeat="n in notifications track by $index"
+                    ng-class="{'grey lighten-1' : n.read && n._id !== id, 'colorSecondary' : n._id === id}">
+                    <img ng-src="{{getAvatar(n.senderId.avatar)}}" alt="{{n.senderId.firstname}} {{n.senderId.name}}"
+                         class="circle hide-on-med-and-down">
+                    <a href="javascript:void(0);" class="title"
+                       ng-class="{'green-text text-lighten-2' : n._id === id, 'red-text text-lighten-2' : n._id !== id}"
+                       ng-bind-html="n.title" ng-click="show(n._id)"></a>
+                    <p><span class="truncate" ng-bind-html="n.exerp"></span> <br>
+                        <small>{{n.senderId.firstname}} {{n.senderId.name}} <br/>
+                            {{n.timestamp | date : 'short'}} <br/>
+                            <a href="javascript:void(0);" class="waves-effect waves-white accent-text-color"
+                               ng-click="show(n._id)"
+                               title="{{'notifications.more' | translate}}">
+                                <i class="fa fa-fw fa-2x fa-external-link-square"></i>
+                            </a>
+                            <a href="javascript:void(0);" ng-click="markAsRead(n._id)"
+                               title="{{n.read && ('headerMenu.notifications.mark-as-unread' | translate) || ('headerMenu.notifications.mark-as-read' | translate)}}"
+                               class="waves-effect waves-white accent-text-color">
+                                <i ng-class="{'fa fa-fw fa-2x fa-envelope' : !n.read, 'fa fa-fw fa-2x fa-envelope-open' : n.read}"></i>
+                            </a>
+                            <a href="javascript:void(0);" ng-click="deleteNotification(n._id)"
+                               title="{{'headerMenu.notifications.delete' | translate}}"
+                               class="waves-effect waves-white accent-text-color">
+                                <i class="fa fa-fw fa-2x fa-trash"></i>
+                            </a>
+                        </small>
+                    </p>
+                </li>
+            </ul>
         </div>
-
+        <div class="col s8" ng-if="id">
+            <div class="notif-sender" ng-if="notif">
+                <img ng-src="{{getAvatar(notif.senderId.avatar)}}"
+                     alt="{{notif.senderId.firstname}} {{notif.senderId.name}}"
+                     class="circle hide-on-med-and-down">
+            </div>
+            <div class="card-panel notif-panel" ng-if="notif">
+                <a href="javascript:void(0);" class="notif-close">
+                    <i class="material-icons" ng-click="close()">close</i></a>
+                <h4><a href="javascript:void(0);" ng-bind-html="notif.title"></a></h4>
+                <p><b>{{notif.senderId.firstname}} {{notif.senderId.name}}</b> | {{notif.timestamp | date : 'short'}}
+                </p>
+                <p ng-bind-html="notif.content" style="text-align: justify"></p>
+                <small><a href="javascript:void(0);" ng-click="markAsRead(n._id)"
+                          title="{{n.read && ('headerMenu.notifications.mark-as-unread' | translate) || ('headerMenu.notifications.mark-as-read' | translate)}}"
+                          class="waves-effect waves-white accent-text-color">
+                    <i ng-class="{'fa fa-fw fa-2x fa-envelope' : !n.read, 'fa fa-fw fa-2x fa-envelope-open' : n.read}"></i>
+                </a>
+                    <a href="javascript:void(0);" ng-click="deleteNotification(n._id)"
+                       title="{{'headerMenu.notifications.delete' | translate}}"
+                       class="waves-effect waves-white accent-text-color">
+                        <i class="fa fa-fw fa-2x fa-trash"></i>
+                    </a>
+                </small>
+            </div>
+        </div>
+        <div class="card-panel" ng-if="notifications.length ===0">
+            <h4 class="center-align" translate="notifications.nodata"></h4>
+        </div>
     </div>
 </div>
