--- a/src/app/index.css
+++ b/src/app/index.css
@@ -200,6 +200,15 @@
     border-radius: 4px;
 }
 
+.btn-floating {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    padding: 0;
+    background-color: #26a69a;
+    border-radius: 50%;
+}
+
 .btn3 {
     width: 32%;
     height: 25px;
