--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -1,10 +1,7 @@
 <div class="container">
-    <!-- body start-->
     <div class="row"></div>
-
-    <!-- Entete -->
     <div class="row dark-primary-color valign-wrapper">
-        <div class="col m3 s12 center">
+        <div class="col m3 s12 center" ng-if="player">
             <avatar person="player" width="'75px'"></avatar>
         </div>
         <div class="col m7 s12 center">
@@ -16,110 +13,14 @@
             <button class="btn accent-color" ng-click="doTheBack()" translate="commons.buttons.back"></button>
         </div>
     </div>
-
-    <!-- action bar -->
     <div class="row card">
         <!--card-->
         <div class="col m12 s12 animated fadeInUp" style="-webkit-animation-duration:{{$index * 100}}ms">
-            <div class="card-content">
-                <div class="center-align">
-                    <div class="row">
-                        <div class="col m4 s12">
-                            <div class="left-align"><h5 translate="playerLabels.playerCivilSection"></h5></div>
-                            <div class="divider accent-color"></div>
-                            <div>&nbsp;</div>
-                            <div class="left-align">{{player.age}} {{'commons.format.ageYear' | translate }}</div>
-                            <div>&nbsp;</div>
-                            <div class="left-align" ng-if="player.nationality">{{'playerLabels.playerNationality' |
-                                translate }} : {{player.nationality.label || player.nationality}}
-                            </div>
-                            <div>&nbsp;</div>
-                            <div class="left-align" ng-if="player.birthCity">{{'playerLabels.playerBirthCity' |
-                                translate }} : {{player.birthCity}}
-                            </div>
-                            <div>&nbsp;</div>
-                            <div class="left-align" ng-if="mapShow">
-                                <a class="waves-effect waves-light modal-trigger accent-text-color"
-                                   ng-click="openMap()">
-                                    <i class="material-icons">location_on</i> {{player.address.formatedAddress}}
-                                </a>
-                            </div>
-                            <div ng-if="mapShow">&nbsp;</div>
-                        </div>
-                        <div class="col m4 s12 light-primary-color">
-                            <div class="left-align"><h5 translate="playerLabels.playerCaracterSection"></h5></div>
-                            <div class="divider accent-color"></div>
-                            <div>&nbsp;</div>
-                            <div class="left-align">{{'playerLabels.playerWeight' | translate }} :
-                                {{player.status.weight}}
-                            </div>
-                            <div>&nbsp;</div>
-                            <div class="left-align">{{'playerLabels.playerHeight' | translate }} :
-                                {{player.status.height}}
-                            </div>
-                            <div>&nbsp;</div>
-                            <div class="left-align">{{'playerLabels.playerLaterality' | translate }} :
-                                {{player.status.laterality}}
-                            </div>
-                            <div>&nbsp;</div>
-                            <div class="left-align">{{'playerLabels.playerPositionType' | translate }} :
-                                {{player.positionType}}
-                            </div>
-                            <div>&nbsp;</div>
-                        </div>
-                        <div class="col m4 s12">
-                            <div class="center-align"><h5 translate="playerLabels.playerContactSection"></h5></div>
-                            <div class="divider accent-color"></div>
-                            <div>&nbsp;</div>
-                            <div class="left-align"><i class="material-icons">phone</i> {{player.contact.home}}</div>
-                            <div>&nbsp;</div>
-                            <div class="left-align"><i class="material-icons">smartphone</i>
-                                {{player.contact.cellphone}}
-                            </div>
-                            <div>&nbsp;</div>
-                            <div class="left-align"><a href="mailto:{{player.contact.email}}"
-                                                       class="accent-text-color"><i
-                                    class="material-icons">mail</i> {{player.contact.email}}</a></div>
-                            <div>&nbsp;</div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row dark-primary-color">
-                    <div class="col s6 center-align">
-                        <a href="#/private/updatePlayer/{{player._id}}">
-                            <i class="white-text material-icons small tooltipped"
-                               data-position="top" data-delay="20"
-                               data-tooltip="{{'viewPlayer.buttons.updatePlayer' | translate }}">mode_edit</i>
-                        </a>
-                    </div>
-                    <div class="col s6 center-align">
-                        <a href="#/private/playerStats/{{player._id}}">
-                            <i class="white-text small fa fa-bar-chart tooltipped"
-                               data-position="top" data-delay="20"
-                               data-tooltip="{{'viewPlayer.buttons.viewStatsPlayer' | translate }}"></i>
-                        </a>
-                    </div>
-                </div>
+            <div class="card-content" ng-if="player">
+                <player-infos player="player"></player-infos>
             </div>
         </div>
     </div>
-
-    <!-- body end-->
 </div>
 
-<!-- Modal map Player -->
-<div id="mapPlayer" class="modal modal-fixed-footer">
-    <div class="modal-content">
-        <div class="primary-text-color"><i class="material-icons">location_on</i>
-            {{player.address.formatedAddress}}
-        </div>
-        <br>
-        <div id="ngMapPlayer" style="width:100%;height:90%;"></div>
-    </div>
-    <div class="modal-footer">
-        <a href="#/private/viewPlayer/{{player._id}}"
-           class="modal-action modal-close waves-effect waves-red btn accent-color"
-           translate="commons.buttons.close"></a>
-    </div>
-</div>
+
