notifications bug fix

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -78,7 +78,7 @@
                         <a href="#/private/profile" class="white-text"><i class="material-icons left">portrait</i></a>
                     </li>
                     <li class="right">
-                        <header-notifications user="user._id"></header-notifications>
+                        <header-notifications user="user" meta="meta"></header-notifications>
                     </li>
                 </ul>
 
