--- a/src/app/components/directives/stats/hand/efficiency.html
+++ b/src/app/components/directives/stats/hand/efficiency.html
@@ -1,76 +1,80 @@
 <!-- efficiency gauge -->
 <div class="card white" ng-if="bindtoid==='gaugeEfficiencyGlobal'">
-    <div class="card-title dark-primary-color center">
-            <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
+    <div class="card-title dark-primary-color center-align">
+        <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
-    <div class="card-content white center-align" ng-show="noStat">
-        <c3chart bindto-id="gaugeEfficiencyGlobal" 
-                 chart-columns="efficiencyGlobalCol" 
+    <div class="card-content white center-align" ng-if="noStat">
+        <c3chart bindto-id="gaugeEfficiencyGlobal"
+                 chart-columns="efficiencyGlobalCol"
                  chart-data="efficiencyGlobalData"
-                 padding-top="0" 
-                 padding-bottom="padding" 
-                 padding-right="padding" 
+                 padding-top="0"
+                 padding-bottom="padding"
+                 padding-right="padding"
                  padding-left="padding">
             <chart-gauge min="0" max="100" width="30"/>
         </c3chart>
     </div>
-    <div class="card-content white center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
+    <div class="card-content white center-align red-text text-lighten-2" ng-if="!noStat"
+         translate="stats.resumeTab.noData"></div>
 </div>
 
 <div class="card white" ng-if="bindtoid==='gaugeEfficiency9m'">
-    <div class="card-title dark-primary-color center">
-            <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
+    <div class="card-title dark-primary-color center-align">
+        <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
-    <div class="card-content white center-align" ng-show="noStat">
-        <c3chart bindto-id="gaugeEfficiency9m" 
-                 chart-columns="efficiency9mCol" 
+    <div class="card-content white center-align" ng-if="noStat">
+        <c3chart bindto-id="gaugeEfficiency9m"
+                 chart-columns="efficiency9mCol"
                  chart-data="efficiency9mData"
-                 padding-top="0" 
-                 padding-bottom="padding" 
-                 padding-right="padding" 
+                 padding-top="0"
+                 padding-bottom="padding"
+                 padding-right="padding"
                  padding-left="padding">
             <chart-gauge min="0" max="100" width="30"/>
         </c3chart>
     </div>
-    <div class="card-content white center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
+    <div class="card-content white center-align red-text text-lighten-2" ng-if="!noStat"
+         translate="stats.resumeTab.noData"></div>
 </div>
 
 <div class="card white" ng-if="bindtoid==='gaugeEfficiency6m'">
-    <div class="card-title dark-primary-color center">
-            <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
+    <div class="card-title dark-primary-color center-align">
+        <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
-    <div class="card-content white center-align" ng-show="noStat">
-        <c3chart bindto-id="gaugeEfficiency6m" 
-                 chart-columns="efficiency6mCol" 
+    <div class="card-content white center-align" ng-if="noStat">
+        <c3chart bindto-id="gaugeEfficiency6m"
+                 chart-columns="efficiency6mCol"
                  chart-data="efficiency6mData"
-                 padding-top="0" 
-                 padding-bottom="padding" 
-                 padding-right="padding" 
+                 padding-top="0"
+                 padding-bottom="padding"
+                 padding-right="padding"
                  padding-left="padding">
             <chart-gauge min="0" max="100" width="30"/>
         </c3chart>
     </div>
-    <div class="card-content white center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
+    <div class="card-content white center-align red-text text-lighten-2" ng-if="!noStat"
+         translate="stats.resumeTab.noData"></div>
 </div>
 
 <div class="card white" ng-if="bindtoid==='gaugeEfficiency7m'">
-    <div class="card-title dark-primary-color center">
-            <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
+    <div class="card-title dark-primary-color center-align">
+        <span class="white-text title"><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></span>
     </div>
 
-    <div class="card-content white center-align" ng-show="noStat">
-        <c3chart bindto-id="gaugeEfficiency7m" 
-                 chart-columns="efficiency7mCol" 
+    <div class="card-content white center-align" ng-if="noStat">
+        <c3chart bindto-id="gaugeEfficiency7m"
+                 chart-columns="efficiency7mCol"
                  chart-data="efficiency7mData"
-                 padding-top="0" 
-                 padding-bottom="padding" 
-                 padding-right="padding" 
+                 padding-top="0"
+                 padding-bottom="padding"
+                 padding-right="padding"
                  padding-left="padding">
             <chart-gauge min="0" max="100" width="30"/>
         </c3chart>
     </div>
-    <div class="card-content white center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
+    <div class="card-content white center-align red-text text-lighten-2" ng-if="!noStat"
+         translate="stats.resumeTab.noData"></div>
 </div>
