--- a/src/app/components/directives/stats/hand/radarChart.html
+++ b/src/app/components/directives/stats/hand/radarChart.html
@@ -19,10 +19,13 @@
             </div>
         </div>
         <p ng-if="noData" translate="stats.resumeTab.noData"></p>
-        <canvas id="radar" class="chart chart-radar" ng-if="!noData"
-                chart-legend="{{!!series}}" chart-series="series" chart-data="data" chart-labels="labels"
-                ng-if="!loading">
-        </canvas>
+        <div class="q-radar-chart">
+            <canvas id="radar" class="chart chart-radar" ng-if="!noData"
+                    chart-options="radarOpts"
+                    chart-legend="{{series}}" chart-series="series" chart-data="data" chart-labels="labels"
+                    ng-if="!loading">
+            </canvas>
+        </div>
         <div class="right-align" ng-if="!noData">
             <qaobee-stat-detail-modal indicators="indicators" title="title" meta="meta" series="series" owners="owners"
                                       periodicity-active="periodicityActive" periodicity="periodicity"
