--- a/src/app/index.css
+++ b/src/app/index.css
@@ -76,11 +76,11 @@
     color: #37474F;
 }
 
-.light-text-color         { 
+.light-text-color {
     color: #90a4ae !important;
 }
 
-.divider-light         { 
+.divider-light {
     color: #eceff1 !important;
 }
 
@@ -90,13 +90,12 @@
     min-height: 170px
 }
 
-
 .aboutUs .card-transluscent {
-    background-color: rgba(96,125,139, 0.5);
+    background-color: rgba(96, 125, 139, 0.5);
     padding: 20px;
     margin: 3vh 15vw 3vh 15vw;
     text-align: center;
-    color:#ffffff;
+    color: #ffffff;
 }
 
 .aboutUs-part-two {
@@ -139,6 +138,7 @@
     -1px 1px 1px rgba(0, 0, 0, 0.5),
     1px 1px 1px rgba(0, 0, 0, 0.5);
 }
+
 .price h4 {
     text-shadow: none;
 }
@@ -186,7 +186,6 @@
     filter: grayscale(100%);
     border-radius: 12px !important;
 }
-
 
 .card .card-content, .card .card-title {
     border-radius: 8px 8px 0 0;
@@ -425,11 +424,13 @@ footer.page-footer {
         width: 90%;
     }
 }
+
 @media only screen and (max-width: 1025px) {
     .brand-logo {
         max-width: 30%;
     }
 }
+
 @media only screen and (max-width: 769px) {
     .brand-logo {
         max-width: 70%;
@@ -1112,7 +1113,7 @@ footer.page-footer {
     -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
     -o-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
-    filter:progid:DXImageTransform.Microsoft.Shadow(color=rgba(0, 0, 0, 0.12), Direction=180, Strength=10);
+    filter: progid:DXImageTransform.Microsoft.Shadow(color=rgba(0, 0, 0, 0.12), Direction=180, Strength=10);
 }
 
 .notif-sender {
@@ -1120,6 +1121,7 @@ footer.page-footer {
     margin-right: auto;
     text-align: center;
 }
+
 .notif-sender img {
     max-width: 120px;
     -webkit-filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.5));
@@ -1133,7 +1135,15 @@ footer.page-footer {
     margin-top: -60px;
     padding-top: 50px;
 }
+
 .notif-panel .notif-close {
     margin-top: -40px;
     float: right;
- }
+}
+
+.q-radar-chart {
+    height: 300px;
+}
+.q-modal-chart {
+    height: 200px;
+}
