fixes QHBWEB-90 : Fusionner la page "état civil" d'un joueur avec sa page de stats

--- a/src/app/components/directives/sandbox/playerInfos/playerInfos.html
+++ b/src/app/components/directives/sandbox/playerInfos/playerInfos.html
@@ -47,15 +47,13 @@
             <div class="center-align"><h5 translate="playerLabels.playerContactSection"></h5></div>
             <div class="divider accent-color"></div>
             <div>&nbsp;</div>
-            <div class="left-align"><i class="material-icons">phone</i> {{player.contact.home}}</div>
+            <div class="left-align"><i class="fa fa-fw fa-phone"></i> {{player.contact.home}}</div>
             <div>&nbsp;</div>
-            <div class="left-align"><i class="material-icons">smartphone</i>
-                {{player.contact.cellphone}}
-            </div>
+            <div class="left-align"><i class="fa fa-fw fa-mobile"></i> {{player.contact.cellphone}}</div>
             <div>&nbsp;</div>
             <div class="left-align"><a href="mailto:{{player.contact.email}}"
-                                       class="accent-text-color"><i
-                    class="material-icons">mail</i> {{player.contact.email}}</a></div>
+                                       class="accent-text-color"><i class="fa fa-fw fa-envelope"></i>
+                {{player.contact.email}}</a></div>
             <div>&nbsp;</div>
         </div>
     </div>
