--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -5,7 +5,7 @@
     <!-- entete start -->
     <title-page-bar icon="person" title="mainPlayer.title"></title-page-bar>
 
-    <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
+    <filter-calendar meta="meta"></filter-calendar>
 
     <v-tabs class="tabs" horizontal active="activeTabIndex">
         <v-tab class="tab" ng-click="changeTabDefault(0)"><a ng-href=""
