--- a/src/app/modules/sandbox/stats/event/eventStats.html
+++ b/src/app/modules/sandbox/stats/event/eventStats.html
@@ -63,7 +63,7 @@
             <!-- Stats shoot efficiency Start -->
             <div class="row">
                 <div class="col s12 left-align grey-text text-ligthen-4">
-                    <h5><small>{{'stats.efficiency.efficiency' | translate }}</small></h5>
+                    <h5><small translate="stats.efficiency.efficiency"></small></h5>
                 </div>
                 
                 <div class="col l3 m6 s12">
@@ -95,7 +95,7 @@
             <!-- Stats actions pos/neg Start -->
             <div class="row"> 
                 <div class="col s12 left-align grey-text text-ligthen-4">
-                    <h5><small>{{'stats.actionTab.title' | translate }}</small></h5>
+                    <h5><small translate="stats.actionTab.title"></small></h5>
                 </div>
                 <stats-actions-pos-neg></stats-actions-pos-neg>
             </div>
@@ -109,15 +109,15 @@
                     <table class="bordered responsive-table highlight">
                         <thead>
                             <tr class="light-green lighten-1 white-text">
-                                <th data-field="player">{{'stats.eventLabels.player' | translate }}</th>
-                                <th data-field="positionType">{{'stats.eventLabels.position' | translate }}</th>
-                                <th class="center-align" data-field="efficiency">{{'stats.eventLabels.efficiency' | translate }}</th>
-                                <th class="center-align" data-field="efficiency">{{'stats.eventLabels.shoot' | translate }}</th>
-                                <th class="center-align" data-field="yellowCard">{{'stats.eventLabels.yellowCard' | translate }}</th>
-                                <th class="center-align" data-field="exclusion">{{'stats.eventLabels.exclusion' | translate }}</th>
-                                <th class="center-align" data-field="redCard">{{'stats.eventLabels.redCard' | translate }}</th>
-                                <th class="center-align" data-field="attack">{{'stats.eventLabels.attack' | translate }}</th>
-                                <th class="center-align" data-field="defense">{{'stats.eventLabels.defense' | translate }}</th>
+                                <th data-field="player" translate="stats.eventLabels.player"></th>
+                                <th data-field="positionType" translate="stats.eventLabels.position"></th>
+                                <th class="center-align" data-field="efficiency" translate="stats.eventLabels.efficiency"></th>
+                                <th class="center-align" data-field="efficiency" translate="stats.eventLabels.shoot"></th>
+                                <th class="center-align" data-field="yellowCard" translate="stats.eventLabels.yellowCard"></th>
+                                <th class="center-align" data-field="exclusion" translate="stats.eventLabels.exclusion"></th>
+                                <th class="center-align" data-field="redCard" translate="stats.eventLabels.redCard"></th>
+                                <th class="center-align" data-field="attack" translate="stats.eventLabels.attack"></th>
+                                <th class="center-align" data-field="defense" translate="stats.eventLabels.defense"></th>
                             </tr>
                         </thead>
                         <tbody>
